# xgraph

./: .gitignore  Makefile.am  Makefile.in  README  alloc.c  autoconf.h.in  configure  configure.ac  derivative.c  dialog.c  draw.c  hard_devices.c  idraw.c  init.c  params.c  ps.c  read.c  st.c  tgif.c  xgX.c  xgraph.c  xtb.c  xtb.h
src/: Makefile.am  Makefile.in  alloc.c  copyright.h  hpgl.c  idraw.c  init.c  st.c  tgif.c  xgX.c  xgraph.c
