## Process this file with automake to produce Makefile.in

AUTOMAKE_OPTIONS = foreign

SUBDIRS = src

man_MANS = xgraph.man

EXTRA_DIST = \
			 $(man_MANS) \
			 README.ANNOUNCE \
			 README.GENERAL \
			 README.HARDCOPY \
			 README.INSTALL \
			 README.NEWFEATURES \
			 src/bitmaps/dot.11 \
			 src/bitmaps/gray \
			 src/bitmaps/mark1.11 \
			 src/bitmaps/mark2.11 \
			 src/bitmaps/mark3.11 \
			 src/bitmaps/mark4.11 \
			 src/bitmaps/mark5.11 \
			 src/bitmaps/mark6.11 \
			 src/bitmaps/mark7.11 \
			 src/bitmaps/mark8.11 \
			 examples/Animation.xg \
			 examples/bar.xg \
			 examples/surface.xg \
			 examples/surface2.xg \
			 examples/surface3.xg \
			 examples/xgtest.xg

