## Process this file with automake to produce Makefile.in
bin_PROGRAMS = xgraph

xgraph_SOURCES = \
				 alloc.c \
				 copyright.h \
				 derivative.c \
				 dialog.c \
				 draw.c \
				 general.h \
				 hard_devices.c \
				 hard_devices.h \
				 hpgl.c \
				 idraw.c \
				 init.c \
				 params.c \
				 params.h \
				 plotter.h \
				 ps.c \
				 read.c \
				 st.c \
				 st.h \
				 tgif.c \
				 xgX.c \
				 xgout.h \
				 xgraph.c \
				 xgraph.h \
				 xtb.c \
				 xtb.h

